# cashback_manager

./: LICENSE  README.md  cashback.py  cashback_manager.py  cui.py  pyproject.toml
src/cashback_manager/: cui.py  manager.py  models.py  storage.py
